fix flickering

--- a/soccer-tournament/tournament.css
+++ b/soccer-tournament/tournament.css
@@ -44,9 +44,7 @@ path.chord {
      
 #circle:hover path.fade {
     display: none;
-    visibility: hidden;
-    pointer-events: none;
-    opacity: 0.2;
+
  }
 .titles text{
 	fill: white;
